--- a/index2.html
+++ b/index2.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>::RAMAS::</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Estoy en MAIN</h1>
-    <h2>hhh</h2>
+    <h1>Estoy ramita_prueba</h1>
 </body>
 </html>
